# market-montrezor-system

./: .gitignore  ALTCOIN_TRADING_SYSTEM.md  JUPYTER_SETUP.md  README.md  RESUMO.md  SECURITY.md  TRADING_METHOD_CHECKLIST.md  debug_chart_detailed.py  debug_prices.py  debug_signals_chart.py  debug_stoch.py  requirements.txt  simple_crypto_list_yfinance.py  test_import.py  test_import_especifico.py  test_simple_chart.py
analysis_system/: README.md  __init__.py  main.py
analysis_system/assets/: __init__.py  asset.py  portfolio.py  provider.py
analysis_system/data/: yfinance_adapter.py
analysis_system/examples/: basic_usage.py
analysis_system/guides/: COMPLETE_GUIDE.md  TUTORIAL_GRAFICOS.md
analysis_system/indicators/: __init__.py  indicators.py
analysis_system/notebooks/: market_analysis_week.ipynb
analysis_system/run/: run.bat  run.ps1  run_analysis.py
analysis_system/signals/: signals.py
analysis_system/trading/: ALTCOIN_TRADING_SYSTEM.md
config/: __init__.py  keys_template.py
gems_system/: 2  README.md  accumulation_sector.py  accumulation_sector_backup.py  comprehensive_analysis.py  config.py  dashboard_com_tutorial.py  dashboard_setores.html  debug_rs.py  evolution_functions.py  gems_finder.py  gems_finder.txt  persistence_tracker.py  run.bat  run.ps1  run_visualizer.bat  social_analyzer_yt_telegram.py  telegram_config.py  visualizer.py  visualizer_complete.py
gems_system/data/: confirmed_gems.json  (+3 more)
notebooks/: market_analysis_diagrams.drawio  market_analysis_oop.ipynb  market_analysis_week.ipynb  pyproject.toml
src/: tarefas_pendentes.md
(+32 files in other folders)
