[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-analyze"
version = "0.1.0"
dependencies = [
  "pandas",
  "numpy",
  "yfinance",
  "plotly"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
market-analyze = "market_analyze.main:main"
